# ubi-config

./: .buildinfo  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  renovate.json  requirements-dev-py313.in  requirements-dev-py313.txt  requirements-dev-py39.in  requirements-dev-py39.txt  requirements-dev.in  requirements.in  requirements.txt  search.html  searchindex.js  setup.py  test-requirements.txt  tox.ini
.github/: CODEOWNERS
.github/workflows/: release.yml  tox-test.yml
_sources/: index.rst.txt
docs/: conf.py  index.rst
examples/: ubi-config-report
scripts/: push-docs
tests/data/bad_configs/: syntax_error.yaml
tests/data/bad_configs/ubi7/: invalid_config.yaml  (+1 more)
tests/ubi_config/: test_ubi.py
tests/ubi_config/config_types/: test_config_types.py
tests/ubi_config/utils/: test_gitlab_api.py  test_validation.py
tests/ubiconfig/: test_ubi.py
tests/ubiconfig/config_types/: test_config_types.py
tests/ubiconfig/loaders/: test_gitlab_loader.py  test_loader.py
tests/ubiconfig/utils/: test_gitlab_api.py  test_validation.py
ubi_config/: __init__.py  ubi.py
ubi_config/config_types/: content_sets.py  modules.py  packages.py
ubi_config/utils/api/: gitlab.py
ubiconfig/: __init__.py  exceptions.py  ubi.py
ubiconfig/_impl/loaders/: __init__.py  base.py  gitlab.py  local.py
ubiconfig/config_types/: __init__.py  content_sets.py  flags.py  modules.py  packages.py
ubiconfig/utils/: config_schema.json  config_validation.py
ubiconfig/utils/api/: gitlab.py
(+5 files in other folders)
